--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "k-oop",
   "version": "1.1.1",
-  "description": "simple js oop lib helper",
+  "description": "simple js oop lib helper with classes, inheritance and annotations or method decorators",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
