--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "simple js oop lib helper with classes, inheritance and annotations or method decorators",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "vminor": "git commit && npm version minor",
+    "vmajor": "git commit && npm version major",
+    "vpatch": "git commit && npm version patch"
   },
   "keywords": [
     "framework",
