--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "simple js OOP/AOP lib helper with classes, inheritance and method aspects (method interceptors)",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "jest",
     "dist": "browserify ./index.js -o ./dist/kaop-lib.dev.js && uglifyjs ./dist/kaop-lib.dev.js --compress --mangle --keep-fnames --output ./dist/kaop-lib.min.js",
     "preversion": "npm run dist"
   },
@@ -25,6 +25,7 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "jest": "^18.1.0",
     "mocha": "^3.1.2",
     "uglifyjs": "^2.4.10"
   }
