prerelease - update dist

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "dist": "browserify ./index.js -o ./dist/kaop-lib.dev.js && uglifyjs ./dist/kaop-lib.dev.js --compress --mangle --keep-fnames --output ./dist/kaop-lib.min.js && git commit -am \"prerelease - update dist\"",
+    "dist": "browserify ./index.js -o ./dist/kaop-lib.dev.js & uglifyjs ./dist/kaop-lib.dev.js --compress --mangle --keep-fnames --output ./dist/kaop-lib.min.js & git commit -am \"prerelease - update dist\"",
     "preversion": "npm run dist"
   },
   "keywords": [
