--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "dist": "browserify ./index.js -o ./dist/kaop-lib.dev.js ; uglifyjs ./dist/kaop-lib.dev.js --compress --mangle --keep-fnames --output ./dist/kaop-lib.min.js ; git commit -am \"prerelease - update dist\"",
-    "preversion": "npm run dist"
+    "version": "browserify ./index.js -o ./dist/kaop-lib.dev.js ; uglifyjs ./dist/kaop-lib.dev.js --compress --mangle --keep-fnames --output ./dist/kaop-lib.min.js ; git commit -am \"prerelease - update dist\"",
+    "preversion": "npm test",
+    "postversion": "git push ; git push --tags"
   },
   "keywords": [
     "framework",
@@ -14,14 +15,14 @@
     "oop",
     "aop"
   ],
-  "author": "ciroreed",
+  "author": "k1r0s",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ciroreed/kaop.git"
+    "url": "git+https://github.com/k1r0s/kaop.git"
   },
-  "homepage": "https://github.com/ciroreed/kaop",
+  "homepage": "https://github.com/k1r0s/kaop",
   "bugs": {
-    "url": "https://github.com/ciroreed/kaop/issues"
+    "url": "https://github.com/k1r0s/kaop/issues"
   },
   "license": "ISC",
   "devDependencies": {
