--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "simple js OOP/AOP lib helper with classes, inheritance and method Advices (method interceptors)",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha | coveralls",
     "version": "browserify ./index.js -o ./dist/kaop-lib.dev.js ; uglifyjs ./dist/kaop-lib.dev.js --compress --mangle --keep-fnames --output ./dist/kaop-lib.min.js",
     "preversion": "npm test",
     "postversion": "git push ; git push --tags"
