--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "simple js OOP/AOP lib helper with classes, inheritance and method Advices (method interceptors)",
   "main": "index.js",
   "scripts": {
-    "test": "mocha | coveralls",
+    "test": "mocha",
     "version": "browserify ./index.js -o ./dist/kaop-lib.dev.js ; uglifyjs ./dist/kaop-lib.dev.js --compress --mangle --keep-fnames --output ./dist/kaop-lib.min.js",
-    "preversion": "npm test",
-    "postversion": "git push ; git push --tags"
+    "preversion": "npm test && coverage.s",
+    "postversion": "git push --follow-tags"
   },
   "keywords": [
     "framework",
@@ -26,7 +26,10 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "coveralls": "^2.12.0",
+    "jscover": "^1.0.0",
     "mocha": "^3.1.2",
+    "mocha-lcov-reporter": "^1.3.0",
     "uglifyjs": "^2.4.10"
   }
 }
