--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha",
     "version": "browserify ./index.js -o ./dist/kaop-lib.dev.js ; uglifyjs ./dist/kaop-lib.dev.js --compress --mangle --keep-fnames --output ./dist/kaop-lib.min.js",
-    "preversion": "npm test",
+    "preversion": "npm test && ./coverage-report && cat coverage/coverage.lcov | ./node_modules/coveralls/bin/coveralls.js",
     "postversion": "git push --follow-tags",
     "report-cover": "./coverage.s"
   },
@@ -29,7 +29,7 @@
   "devDependencies": {
     "coveralls": "^2.12.0",
     "jscover": "^1.0.0",
-    "mocha": "^3.1.2",
+    "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "uglifyjs": "^2.4.10"
   }
