--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kaop",
   "version": "2.7.5",
   "description": "simple js OOP/AOP lib helper with classes, inheritance and method Advices (method interceptors)",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "mocha",
     "version": "browserify ./index.js -o ./dist/kaop-lib.dev.js ; uglifyjs ./dist/kaop-lib.dev.js --compress --mangle --keep-fnames --output ./dist/kaop-lib.min.js",
