--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "2.7.5",
   "description": "simple js OOP/AOP lib helper with classes, inheritance and method Advices (method interceptors)",
   "main": "lib/index.js",
+  "jest": {
+    "verbose": true
+  },
   "scripts": {
-    "test": "mocha",
+    "test": "jest",
+    "coverage": "jest --coverage",
     "version": "browserify ./index.js -o ./dist/kaop-lib.dev.js ; uglifyjs ./dist/kaop-lib.dev.js --compress --mangle --keep-fnames --output ./dist/kaop-lib.min.js",
     "preversion": "npm test && ./coverage-report && cat coverage/coverage.lcov | ./node_modules/coveralls/bin/coveralls.js",
     "postversion": "git push --follow-tags",
@@ -27,10 +31,9 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "browserify": "^14.1.0",
     "coveralls": "^2.12.0",
-    "jscover": "^1.0.0",
-    "mocha": "^3.2.0",
-    "mocha-lcov-reporter": "^1.3.0",
+    "jest": "^19.0.2",
     "uglifyjs": "^2.4.10"
   }
 }
