--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest",
     "coverage": "jest --coverage",
     "version": "browserify ./index.js -o ./dist/kaop-lib.dev.js ; uglifyjs ./dist/kaop-lib.dev.js --compress --mangle --keep-fnames --output ./dist/kaop-lib.min.js",
-    "preversion": "npm test && ./coverage-report && cat coverage/coverage.lcov | ./node_modules/coveralls/bin/coveralls.js",
+    "preversion": "jest --coverage && cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "postversion": "git push --follow-tags",
     "report-cover": "./coverage.s"
   },
