--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaop",
-  "version": "2.7.8",
+  "version": "2.7.9",
   "description": "simple js OOP/AOP lib helper with classes, inheritance and method Advices (method interceptors)",
   "main": "root.js",
   "jest": {
@@ -11,7 +11,7 @@
     "coverage": "jest --coverage",
     "version": "browserify ./lib/index.js -o ./dist/kaop-lib.dev.js ; uglifyjs ./dist/kaop-lib.dev.js --compress --mangle --keep-fnames --output ./dist/kaop-lib.min.js",
     "preversion": "jest --coverage && cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js ; git commit --amend",
-    "postversion": "git push --follow-tags",
+    "postversion": "git push origin master --follow-tags",
     "report-cover": "./coverage.s",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
