--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "kaop",
   "version": "3.0.0",
-  "description": "simple js OOP lib helper with IoC extensions",
-  "main": "index.js",
+  "description": "Simple OOP JavaScript library with reflection techniques",
+  "main": "dist/kaop.cjs.js",
+  "module": "dist/kaop.esm.js",
+  "browser": "dist/kaop.umd.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rollup -c rollup.config.js"
   },
   "keywords": [
     "oop",
     "aop",
+    "reflection",
     "ioc",
     "di"
   ],
@@ -23,6 +27,9 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "jest": "^21.2.1"
+    "jest": "^21.2.1",
+    "rollup": "^0.52.0",
+    "rollup-plugin-buble": "^0.18.0",
+    "rollup-plugin-commonjs": "^8.2.6"
   }
 }
