--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "jest": "^21.2.1",
+    "jest": "~21.0.0",
     "rollup": "^0.52.0",
     "rollup-plugin-buble": "^0.18.0",
     "rollup-plugin-commonjs": "^8.2.6"
