--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest": "~21.0.0",
     "rollup": "^0.52.0",
     "rollup-plugin-buble": "^0.18.0",
-    "rollup-plugin-commonjs": "^8.2.6"
+    "rollup-plugin-commonjs": "^8.2.6",
+    "rollup-plugin-uglify": "^2.0.1"
   }
 }
