--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "author": "k1r0s",
   "repository": {
-    "createClass": "git",
+    "type": "git",
     "url": "https://github.com/k1r0s/kaop.git"
   },
   "homepage": "https://github.com/k1r0s/kaop",
@@ -27,10 +27,10 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "jest": "~21.0.0",
-    "rollup": "^0.52.0",
-    "rollup-plugin-buble": "^0.18.0",
-    "rollup-plugin-commonjs": "^8.2.6",
-    "rollup-plugin-uglify": "^2.0.1"
+    "jest": "^22.4.2",
+    "rollup": "^0.57.0",
+    "rollup-plugin-buble": "^0.19.2",
+    "rollup-plugin-commonjs": "^9.0.0",
+    "rollup-plugin-uglify": "^3.0.0"
   }
 }
