--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "kaop",
-  "version": "4.4.2",
+  "version": "4.4.3",
   "description": "Simple OOP JavaScript library with reflection techniques",
   "main": "dist/kaop.cjs.js",
   "module": "dist/kaop.esm.js",
   "browser": "dist/kaop.umd.js",
   "scripts": {
-    "test": "jest",
-    "build": "rollup -c rollup.config.js"
+    "test": "tsc && jest",
+    "build": "tsc && rollup -c rollup.config.js"
   },
   "keywords": [
     "oop",
@@ -31,6 +31,10 @@
     "rollup": "^1.23.1",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-uglify": "^3.0.0"
-  }
+    "rollup-plugin-typescript2": "^0.32.1",
+    "rollup-plugin-uglify": "^3.0.0",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4"
+  },
+  "typings": "dist/index.d.ts"
 }
